[gd_scene load_steps=4 format=3 uid="uid://bwdrkscxak5qq"]

[ext_resource type="Script" uid="uid://4ykqe6o7gq0m" path="res://scenes/event_rooms/bulletin_board_event.gd" id="1_ly0ia"]
[ext_resource type="Texture2D" uid="uid://dxotsepmgks1f" path="res://art/UI/走廊.png" id="2_krpls"]
[ext_resource type="PackedScene" uid="uid://br2rpgkb7gbxr" path="res://scenes/event_rooms/event_room_button.tscn" id="3_ywie0"]

[node name="BulletinBoardEvent" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ly0ia")

[node name="Background" type="Panel" parent="."]
custom_minimum_size = Vector2(1920, 1000)
layout_mode = 0
offset_top = 80.0
offset_right = 1920.0
offset_bottom = 1080.0

[node name="HBoxContainer" type="HBoxContainer" parent="Background"]
clip_contents = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PosterImage" type="TextureRect" parent="Background/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(1000, 800)
layout_mode = 2
texture = ExtResource("2_krpls")
expand_mode = 2
stretch_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Background/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 75

[node name="DescriptionLabel" type="RichTextLabel" parent="Background/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(900, 500)
layout_mode = 2
theme_override_font_sizes/normal_font_size = 60
text = "破旧的公告栏上贴着一张褪色的失踪人口海报。
照片上的人脸模糊不清，下方用潦草的字迹写着：
'小心！下一个失踪的可能就是你...'"

[node name="ButtonContainer" type="VBoxContainer" parent="Background/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="CarefulButton" parent="Background/HBoxContainer/VBoxContainer/ButtonContainer" instance=ExtResource("3_ywie0")]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "小心撕下简报"
flat = true

[node name="TearButton" parent="Background/HBoxContainer/VBoxContainer/ButtonContainer" instance=ExtResource("3_ywie0")]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "粗暴撕碎简报"
flat = true

[node name="IgnoreButton" parent="Background/HBoxContainer/VBoxContainer/ButtonContainer" instance=ExtResource("3_ywie0")]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "置之不理"
flat = true
